--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.socialnetworkteo">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.socialnetworkteo" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -10,17 +14,42 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SocialNetworkTeo">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.EditUserActivity"
+            android:exported="true"
+            android:label="@string/title_activity_edit_user" />
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713" /> <!-- Include the AdActivity configChanges and theme. -->
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:exported="false"
+            android:theme="@android:style/Theme.Translucent" />
+        <activity
+            android:name=".activities.EditListUserActivity"
+            android:exported="true"
+            android:label="@string/title_activity_edit"
+            android:resizeableActivity="true"
+            android:theme="@style/Theme.SocialNetworkTeo.NoActionBar"
+            tools:targetApi="24" />
+
+        <meta-data
+            android:name="com.google.android.gms.ads.AD_MANAGER_APP"
+            android:value="true" />
+
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.SocialNetworkTeo.NoActionBar">
+            android:theme="@style/Theme.SocialNetworkTeo.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="UserActivity" />
+        <activity android:name=".activities.UserActivity" />
     </application>
 
 </manifest>
