--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.socialnetworkteo" >
+    package="com.example.socialnetworkteo">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -12,7 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SocialNetworkTeo">
+        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
+        <activity
+            android:name=".activities.AddUserActivity"
+            android:exported="true"
+            android:label="@string/title_activity_add_user" />
         <activity
             android:name=".activities.EditUserActivity"
             android:exported="true"
@@ -20,19 +24,12 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713" /> <!-- Include the AdActivity configChanges and theme. -->
+            android:value="ca-app-pub-3940256099942544~3347511713" />
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:exported="false"
             android:theme="@android:style/Theme.Translucent" />
-        <activity
-            android:name=".activities.EditListUserActivity"
-            android:exported="true"
-            android:label="@string/title_activity_edit"
-            android:resizeableActivity="true"
-            android:theme="@style/Theme.SocialNetworkTeo.NoActionBar"
-            tools:targetApi="24" />
 
         <meta-data
             android:name="com.google.android.gms.ads.AD_MANAGER_APP"
@@ -42,14 +39,16 @@
             android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.SocialNetworkTeo.NoActionBar" >
+            android:theme="@style/Theme.SocialNetworkTeo.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.UserActivity" />
+        <activity android:name=".activities.UserActivity"
+            android:label="@string/title_activity_user"
+            android:theme="@style/Theme.MaterialComponents.Dialog"/>
     </application>
 
 </manifest>
